--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,12 @@ timezone: ''
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: https://blog.xx996.top
-permalink: :year/:month/:day/:title/
+abbrlink:
+  enable: true
+  alg: crc32  # 算法：crc16(default) and crc32
+  rep: hex    # 进制：dec(default) and hex
+permalink: article/:abbrlink.html
+
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
