--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "hexo": "^5.0.0",
     "hexo-abbrlink": "^2.2.1",
     "hexo-generator-archive": "^1.0.0",
+    "hexo-generator-baidu-sitemap": "''0.1.9",
     "hexo-generator-category": "^1.0.0",
+    "hexo-generator-feed": "''3.0.0",
     "hexo-generator-index": "^2.0.0",
+    "hexo-generator-json-content": "''4.2.3",
     "hexo-generator-searchdb": "^1.3.4",
     "hexo-generator-sitemap": "^2.1.0",
     "hexo-generator-tag": "^1.0.0",
@@ -24,6 +27,7 @@
     "hexo-renderer-marked": "^4.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "hexo-wordcount": "''6.0.1"
   }
 }
