--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "hexo generate",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
-    "server": "hexo server"
+    "server": "hexo server",
+    "remote": "ssh root@xx996.top /code/my-blog/deploy.sh"
   },
   "hexo": {
     "version": "5.4.0"
