--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server",
-    "remote": "ssh root@xx996.top /code/my-blog/deploy.sh"
+    "remote": "ssh root@xx996.top   chmod +x /code/my-blog/deploy.sh ;/code/my-blog/deploy.sh"
   },
   "hexo": {
     "version": "5.4.0"
