--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -177,7 +177,7 @@ site_state: true
 # Key is the link label showing to end users.
 # Value before `||` delimiter is the target permalink, value after `||` delimiter is the name of Font Awesome icon.
 social:
-  GitHub: https://github.com/lizeze || fab fa-github
+  GitHub: https://github.com/xdm666 || fab fa-github
   # E-Mail: mailto:yourname@gmail.com || fa fa-envelope
   #Weibo: https://weibo.com/yourname || fab fa-weibo
   #Google: https://plus.google.com/yourname || fab fa-google
@@ -390,7 +390,7 @@ bookmark:
 # `Follow me on GitHub` banner in the top-right corner.
 github_banner:
   enable: true
-  permalink: https://github.com/lizeze
+  permalink: https://github.com/xdm666
   title: Follow me on GitHub
  
 
