--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://blog.xx996.fun
+url: https://xx996.fun
 abbrlink:
   enable: true
   alg: crc32  # 算法：crc16(default) and crc32
